--- a/css/aboutMeStyle.css
+++ b/css/aboutMeStyle.css
@@ -1,32 +1,66 @@
-.body-container {
+body {
+    margin: 0;
+    background-color: black;
+}
+
+.main {
     display: grid;
-    grid-template-areas: 'a b' 'a c';
-    column-gap: 10%;
-    row-gap: 30px;
-    width: 80%;
-    left: 10%;
+    top: 30vh;
+    left: 5vw;
+    width: 90vw;
     position: relative;
+    grid-template-areas: 'a b' 'c d';
+    grid-template-columns: 60% 40%; 
 }
 
-.main-text {
+.title {
+    color: #0dacac;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 50px;
     grid-area: a;
-    font-size: medium;
 }
 
-.sub-text {
-    transition: .75s;
-    padding: 30px;
-    background-color: #f1f1f1;
+.text {
+    color: white;
+    font-size: 1.3em;
+    grid-area: c;
 }
 
-.sub-text:hover {
-    transform: scale(1.05);
-}
-
-.st1 {
+.interests-title {
+    color: #0dacac;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 35px;
     grid-area: b;
 }
 
-.st2 {
-    grid-area: c;
+.interests-section {
+    color: white;
+    grid-area: d;
+}
+
+.interest-pop-up {
+    display: none;
+    min-height: 40px;
+    width: 150px;
+    position: absolute;
+    background-color: white;
+    color: black;
+    padding: 5px;
+    border-radius: 2px;
+}
+
+.interest-entry:hover {
+    cursor: pointer;
+}
+
+.interest-entry:hover .interest-pop-up {
+    display: inline-block;
+}
+
+@media (max-width: 700px) {
+    .main {
+        grid-template-areas: 'a' 'c' 'b' 'd';
+        grid-template-columns: 100%;
+        top: 10vh;
+    }
 }
