--- a/css/projectsStyle.css
+++ b/css/projectsStyle.css
@@ -12,8 +12,9 @@ body {
     top: 50px;
     position: relative;
     grid-template-areas: 'a b' 'a c';
-    column-gap: 30%;
-    grid-template-columns: 30% 40%;
+    column-gap: 5%;
+    grid-template-columns: 30% 65%;
+    grid-template-rows: 20% auto;
 }
 
 .projects-panel {
@@ -74,6 +75,7 @@ body {
     grid-area: b;
     color: #0dacac;
     font-size: 30px;
+    text-align: center;
 }
 
 /* Project pane stuff */
