--- a/css/projectsStyle.css
+++ b/css/projectsStyle.css
@@ -47,7 +47,8 @@ body {
     grid-area: a;
     text-align: center;
     color: #0dacac;
-    font-size: 28px;
+    font-size: 35px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .project-techs {
@@ -56,6 +57,8 @@ body {
 
 .project-description {
     grid-area: c;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 .techs-list {
@@ -66,6 +69,7 @@ body {
     padding: 0;
     list-style: none;
     row-gap: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
 .tech-item {
@@ -84,8 +88,9 @@ body {
 .main-title {
     grid-area: b;
     color: #0dacac;
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 /* Project pane stuff */
