--- a/css/projectsStyle.css
+++ b/css/projectsStyle.css
@@ -96,20 +96,28 @@ body {
 .mobile-arrows {
     height: 100%;
     width: 100%;
+    display: none;
 }
 
 .arrow-left {
     float: left;
-    background-color: blue;
+    /* background-color: blue; */
     height: 100%;
     width: 10%;
+    background-image: url("../static/images/right-arrow.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    transform: rotateZ(180deg);
 }
 
 .arrow-right {
     float: right;
-    background-color: blue;
+    /* background-color: blue; */
     height: 100%;
     width: 10%;
+    background-image: url("../static/images/right-arrow.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 /* Project pane stuff */
@@ -139,5 +147,8 @@ body {
         grid-template-areas: 'a' 'b' 'c';
         grid-template-columns: auto;
         grid-template-rows: auto auto auto;
+    }
+    .mobile-arrows {
+        display: block;
     }
 }
